tests/positive/pr113_discriminant_constraints.safe
-- Test: pr113_discriminant_constraints
-- Description: Multiple scalar discriminants, defaults, and positional/named constraints on objects and profiles.
-- Expected: ACCEPT

package pR113_Discriminant_Constraints

   default_Kind : constant character = 'A';
   default_Count : constant integer = 2;

   type packet (Active : boolean = True, Kind : character = 'A', Count : integer = 0) is
      record
         value : integer;


   defaulted : packet = (Active = True, Kind = 'A', Count = 0, value = 1);
   positional : packet (True, 'A', 1) = (value = 2);
   named : packet (Active = True, Kind = default_Kind, Count = default_Count) = (value = 3);

   function take (item : in packet (Active = True, Kind = default_Kind, Count = default_Count))
      returns packet (Active = True, Kind = default_Kind, Count = default_Count)
      limit : constant integer = default_Count;
      local : packet (Active = True, Kind = default_Kind, Count = limit) = item;

      return local;



