tests/negative/neg_pr113_constraint_type_mismatch.safe
package neg_PR113_Constraint_Type_Mismatch
   type packet (Active : boolean = True, Kind : character = 'A', Count : integer = 0) is
      record
         value : integer;

   p : packet (Active = 1, Kind = 'A', Count = 1) = (value = 1);

